--- a/index.html
+++ b/index.html
@@ -1,55 +1,54 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
-		<style>
-			html, body {
-				height: 100%;
-				margin: 0;
-				padding: 0;
-			}
+		<link href='http://fonts.googleapis.com/css?family=Philosopher:700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="style/layout.css">
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+		<script>
+		$(document).ready(function(){
+			$(".ormee > .btn.switch_mode").toggle(function() {
+				$(".ormee > .btn.control_page").animate({top:10, opacity:0}, 200);
+				$(".ormee > .btn.add_element").animate({top:10, opacity:0}, 200);
+			}, function() {
+				$(".ormee > .btn.control_page").animate({top:62, opacity:1}, 200);
+				$(".ormee > .btn.add_element").animate({top:114, opacity:1}, 200);
+			});
 
-			.ormee_wrap {
-				margin: 0 auto;
-				width: 1024px;
-				min-height: 100%;
-				background: #eaeaea;
-			}
-
-			.ormee_kit_panel {
-				position: fixed;
-				top: 10px;
-				left: 10px;
-				width: 50px;
-				background: rgba(0,0,0,.1);
-			}
-
-			.ormee_kit_panel ul {
-				display: block;
-				margin: 0;
-				padding: 4px 0;
-				border-top: 1px solid rgba(255,255,255,.36);
-				border-bottom: 1px solid rgba(0,0,0,.06);
-			}
-
-		</style>
+			$(".ormee > .btn.add_element").toggle(function() {
+				$(".ormee > .btn.control_page").animate({opacity:0.5}, 200);
+				$(".ormee > .btn.switch_mode").animate({opacity:0.5}, 200);
+				var elem = $(this);
+				$({deg: 0}).animate({deg: 45}, {
+					duration: 200,
+					step: function(now) {
+						elem.css({webkitTransform: 'rotate('+now+'deg)', transform: 'rotate('+now+'deg)'});
+					}
+				});
+			}, function() {
+				$(".ormee > .btn.control_page").animate({opacity:1}, 150);
+				$(".ormee > .btn.switch_mode").animate({opacity:1}, 150);
+				var elem = $(this);
+				$({deg: 45}).animate({deg: 0}, {
+					duration: 200,
+					step: function(now) {
+						elem.css({webkitTransform: 'rotate('+now+'deg)', transform: 'rotate('+now+'deg)'});
+					}
+				});
+			});
+		});
+		</script>
 	</head>
 	<body>
-		<div class="ormee_kit_panel">
-			<ul class="page">
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-			</ul>
-			<ul class="kit">
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-			</ul>
-		</div>
-		<div class="ormee_wrap">
-			
+		<div class="ormee">
+			<div class="btn switch_mode active"></div>
+			<div class="btn control_page"></div>
+			<div class="btn add_element"></div>
+
+			<div class="wrap">
+				<div class="title_wrap">
+					<textarea class="h1">Ваш заголовок</textarea>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
